quay/gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: quay-gateway
  namespace: quay-enterprise
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - quay.gwg313.xyz
      tls:
        mode: SIMPLE
        credentialName: quay-cert
